--- a/app/globals.css
+++ b/app/globals.css
@@ -81,6 +81,10 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+  ::selection {
+    background-color: #FFC126;
+    color: #151513;
+  }
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
